output/AphonsoJavaParser.java
// $ANTLR 3.5 C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g 2016-10-05 20:05:22

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class AphonsoJavaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ADD_ASSIGN", "ADICAO", 
		"AND_ASSIGN", "ASPAS", "ASSERT", "BITOR", "BOOLEAN", "BREAK", "BYTE", 
		"CASE", "CATCH", "CHAPEU", "CHAR", "CHAVEDIR", "CHAVEESQ", "CLASS", "COLCHETEDIR", 
		"COLCHETEESQ", "COMMENT", "CONST", "CONTINUE", "DECREMENTO", "DEFAULT", 
		"DIFERENTE", "DIVISAO", "DIV_ASSIGN", "DO", "DOISIGUAIS", "DOISPONTOS", 
		"DOUB", "DOUBLE", "E", "ECOMERCIAL", "ELSE", "ENUM", "EXCLAMACAO", "EXTENDS", 
		"FINAL", "FINALLY", "FLOAT", "FLUT", "FOR", "GOTO", "ID", "IF", "IGUAL", 
		"IMPLEMENTS", "IMPORT", "INCREMENTO", "INSTANCEOF", "INT", "INTEIRO", 
		"INTERFACE", "INTERROGACAO", "LONG", "LONGG", "MAIOR", "MAIORIGUAL", "MENOR", 
		"MENORIGUAL", "MOD", "MULTIPLICACAO", "MUL_ASSIGN", "NATIVE", "NEW", "OR_ASSIGN", 
		"OU", "PACKAGE", "PARENTESEDIR", "PARENTESEESQ", "PONTO", "PONTOVIRGULA", 
		"PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT", "STATIC", "STR", 
		"STRICTFP", "STRING", "SUBTRACAO", "SUB_ASSIGN", "SUPER", "SWITCH", "SYNCHRONIZED", 
		"THIS", "THROW", "THROWS", "TIL", "TRANSIENT", "TRY", "VIRGULA", "VOID", 
		"VOLATILE", "WHILE", "WS", "'%2.f'", "'%d'", "'%s'", "'**'", "'String'", 
		"'System'", "'args'", "'awt'", "'event'", "'false'", "'io'", "'java'", 
		"'javax'", "'main'", "'out'", "'print'", "'printf'", "'println'", "'regex'", 
		"'swing'", "'text'", "'true'", "'util'"
	};
	public static final int EOF=-1;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int T__106=106;
	public static final int T__107=107;
	public static final int T__108=108;
	public static final int T__109=109;
	public static final int T__110=110;
	public static final int T__111=111;
	public static final int T__112=112;
	public static final int T__113=113;
	public static final int T__114=114;
	public static final int T__115=115;
	public static final int T__116=116;
	public static final int T__117=117;
	public static final int T__118=118;
	public static final int T__119=119;
	public static final int T__120=120;
	public static final int T__121=121;
	public static final int T__122=122;
	public static final int T__123=123;
	public static final int T__124=124;
	public static final int ABSTRACT=4;
	public static final int ADD_ASSIGN=5;
	public static final int ADICAO=6;
	public static final int AND_ASSIGN=7;
	public static final int ASPAS=8;
	public static final int ASSERT=9;
	public static final int BITOR=10;
	public static final int BOOLEAN=11;
	public static final int BREAK=12;
	public static final int BYTE=13;
	public static final int CASE=14;
	public static final int CATCH=15;
	public static final int CHAPEU=16;
	public static final int CHAR=17;
	public static final int CHAVEDIR=18;
	public static final int CHAVEESQ=19;
	public static final int CLASS=20;
	public static final int COLCHETEDIR=21;
	public static final int COLCHETEESQ=22;
	public static final int COMMENT=23;
	public static final int CONST=24;
	public static final int CONTINUE=25;
	public static final int DECREMENTO=26;
	public static final int DEFAULT=27;
	public static final int DIFERENTE=28;
	public static final int DIVISAO=29;
	public static final int DIV_ASSIGN=30;
	public static final int DO=31;
	public static final int DOISIGUAIS=32;
	public static final int DOISPONTOS=33;
	public static final int DOUB=34;
	public static final int DOUBLE=35;
	public static final int E=36;
	public static final int ECOMERCIAL=37;
	public static final int ELSE=38;
	public static final int ENUM=39;
	public static final int EXCLAMACAO=40;
	public static final int EXTENDS=41;
	public static final int FINAL=42;
	public static final int FINALLY=43;
	public static final int FLOAT=44;
	public static final int FLUT=45;
	public static final int FOR=46;
	public static final int GOTO=47;
	public static final int ID=48;
	public static final int IF=49;
	public static final int IGUAL=50;
	public static final int IMPLEMENTS=51;
	public static final int IMPORT=52;
	public static final int INCREMENTO=53;
	public static final int INSTANCEOF=54;
	public static final int INT=55;
	public static final int INTEIRO=56;
	public static final int INTERFACE=57;
	public static final int INTERROGACAO=58;
	public static final int LONG=59;
	public static final int LONGG=60;
	public static final int MAIOR=61;
	public static final int MAIORIGUAL=62;
	public static final int MENOR=63;
	public static final int MENORIGUAL=64;
	public static final int MOD=65;
	public static final int MULTIPLICACAO=66;
	public static final int MUL_ASSIGN=67;
	public static final int NATIVE=68;
	public static final int NEW=69;
	public static final int OR_ASSIGN=70;
	public static final int OU=71;
	public static final int PACKAGE=72;
	public static final int PARENTESEDIR=73;
	public static final int PARENTESEESQ=74;
	public static final int PONTO=75;
	public static final int PONTOVIRGULA=76;
	public static final int PRIVATE=77;
	public static final int PROTECTED=78;
	public static final int PUBLIC=79;
	public static final int RETURN=80;
	public static final int SHORT=81;
	public static final int STATIC=82;
	public static final int STR=83;
	public static final int STRICTFP=84;
	public static final int STRING=85;
	public static final int SUBTRACAO=86;
	public static final int SUB_ASSIGN=87;
	public static final int SUPER=88;
	public static final int SWITCH=89;
	public static final int SYNCHRONIZED=90;
	public static final int THIS=91;
	public static final int THROW=92;
	public static final int THROWS=93;
	public static final int TIL=94;
	public static final int TRANSIENT=95;
	public static final int TRY=96;
	public static final int VIRGULA=97;
	public static final int VOID=98;
	public static final int VOLATILE=99;
	public static final int WHILE=100;
	public static final int WS=101;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public AphonsoJavaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public AphonsoJavaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return AphonsoJavaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g"; }



	// $ANTLR start "declaraVar"
	// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:120:1: declaraVar : ( BOOLEAN ID '=' ( 'true' | 'false' )? ';' | CHAR ID ( '=' ID )? ';' | INT ID ( '=' ID )? ';' | STRING ID ( '=' STR )? ';' | DOUBLE ID ( '=' DOUB )? ';' | INT ID '[' ']' '=' 'new' 'int' '[' ID ']' ';' | LONG ID ( '=' LONGG )? ';' | FLOAT ID ( '=' FLUT )? ';' );
	public final void declaraVar() throws  {
		try {
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:121:5: ( BOOLEAN ID '=' ( 'true' | 'false' )? ';' | CHAR ID ( '=' ID )? ';' | INT ID ( '=' ID )? ';' | STRING ID ( '=' STR )? ';' | DOUBLE ID ( '=' DOUB )? ';' | INT ID '[' ']' '=' 'new' 'int' '[' ID ']' ';' | LONG ID ( '=' LONGG )? ';' | FLOAT ID ( '=' FLUT )? ';' )
			int alt8=8;
			switch ( input.LA(1) ) {
			case BOOLEAN:
				{
				alt8=1;
				}
				break;
			case CHAR:
				{
				alt8=2;
				}
				break;
			case INT:
				{
				int LA8_3 = input.LA(2);
				if ( (LA8_3==ID) ) {
					int LA8_8 = input.LA(3);
					if ( (LA8_8==COLCHETEESQ) ) {
						alt8=6;
					}
					else if ( (LA8_8==IGUAL||LA8_8==PONTOVIRGULA) ) {
						alt8=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 8, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case STRING:
				{
				alt8=4;
				}
				break;
			case DOUBLE:
				{
				alt8=5;
				}
				break;
			case LONG:
				{
				alt8=7;
				}
				break;
			case FLOAT:
				{
				alt8=8;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:121:9: BOOLEAN ID '=' ( 'true' | 'false' )? ';'
					{
					match(input,BOOLEAN,FOLLOW_BOOLEAN_in_declaraVar1630); 
					match(input,ID,FOLLOW_ID_in_declaraVar1632); 
					match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1634); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:121:24: ( 'true' | 'false' )?
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==111||LA1_0==123) ) {
						alt1=1;
					}
					switch (alt1) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:
							{
							if ( input.LA(1)==111||input.LA(1)==123 ) {
								input.consume();
								state.errorRecovery=false;
							}
							else {
								MismatchedSetException mse = new MismatchedSetException(null,input);
								throw mse;
							}
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1645); 
					}
					break;
				case 2 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:122:9: CHAR ID ( '=' ID )? ';'
					{
					match(input,CHAR,FOLLOW_CHAR_in_declaraVar1655); 
					match(input,ID,FOLLOW_ID_in_declaraVar1657); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:122:17: ( '=' ID )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==IGUAL) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:122:18: '=' ID
							{
							match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1660); 
							match(input,ID,FOLLOW_ID_in_declaraVar1662); 
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1666); 
					}
					break;
				case 3 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:123:9: INT ID ( '=' ID )? ';'
					{
					match(input,INT,FOLLOW_INT_in_declaraVar1676); 
					match(input,ID,FOLLOW_ID_in_declaraVar1678); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:123:16: ( '=' ID )?
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==IGUAL) ) {
						alt3=1;
					}
					switch (alt3) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:123:17: '=' ID
							{
							match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1681); 
							match(input,ID,FOLLOW_ID_in_declaraVar1683); 
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1687); 
					}
					break;
				case 4 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:124:9: STRING ID ( '=' STR )? ';'
					{
					match(input,STRING,FOLLOW_STRING_in_declaraVar1697); 
					match(input,ID,FOLLOW_ID_in_declaraVar1699); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:124:19: ( '=' STR )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==IGUAL) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:124:20: '=' STR
							{
							match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1702); 
							match(input,STR,FOLLOW_STR_in_declaraVar1704); 
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1708); 
					}
					break;
				case 5 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:125:9: DOUBLE ID ( '=' DOUB )? ';'
					{
					match(input,DOUBLE,FOLLOW_DOUBLE_in_declaraVar1718); 
					match(input,ID,FOLLOW_ID_in_declaraVar1720); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:125:19: ( '=' DOUB )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==IGUAL) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:125:20: '=' DOUB
							{
							match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1723); 
							match(input,DOUB,FOLLOW_DOUB_in_declaraVar1725); 
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1729); 
					}
					break;
				case 6 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:126:7: INT ID '[' ']' '=' 'new' 'int' '[' ID ']' ';'
					{
					match(input,INT,FOLLOW_INT_in_declaraVar1737); 
					match(input,ID,FOLLOW_ID_in_declaraVar1739); 
					match(input,COLCHETEESQ,FOLLOW_COLCHETEESQ_in_declaraVar1740); 
					match(input,COLCHETEDIR,FOLLOW_COLCHETEDIR_in_declaraVar1741); 
					match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1743); 
					match(input,NEW,FOLLOW_NEW_in_declaraVar1745); 
					match(input,INT,FOLLOW_INT_in_declaraVar1747); 
					match(input,COLCHETEESQ,FOLLOW_COLCHETEESQ_in_declaraVar1749); 
					match(input,ID,FOLLOW_ID_in_declaraVar1750); 
					match(input,COLCHETEDIR,FOLLOW_COLCHETEDIR_in_declaraVar1751); 
					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1753); 
					}
					break;
				case 7 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:127:7: LONG ID ( '=' LONGG )? ';'
					{
					match(input,LONG,FOLLOW_LONG_in_declaraVar1762); 
					match(input,ID,FOLLOW_ID_in_declaraVar1764); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:127:15: ( '=' LONGG )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==IGUAL) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:127:16: '=' LONGG
							{
							match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1767); 
							match(input,LONGG,FOLLOW_LONGG_in_declaraVar1769); 
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1773); 
					}
					break;
				case 8 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:128:7: FLOAT ID ( '=' FLUT )? ';'
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_declaraVar1781); 
					match(input,ID,FOLLOW_ID_in_declaraVar1783); 
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:128:16: ( '=' FLUT )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==IGUAL) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:128:17: '=' FLUT
							{
							match(input,IGUAL,FOLLOW_IGUAL_in_declaraVar1786); 
							match(input,FLUT,FOLLOW_FLUT_in_declaraVar1788); 
							}
							break;

					}

					match(input,PONTOVIRGULA,FOLLOW_PONTOVIRGULA_in_declaraVar1792); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaraVar"



	// $ANTLR start "printf"
	// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:132:1: printf : ( '%s' | '%d' | '%2.f' )+ ;
	public final void printf() throws  {
		try {
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:132:8: ( ( '%s' | '%d' | '%2.f' )+ )
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:132:10: ( '%s' | '%d' | '%2.f' )+
			{
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:132:10: ( '%s' | '%d' | '%2.f' )+
			int cnt9=0;
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( ((LA9_0 >= 102 && LA9_0 <= 104)) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:
					{
					if ( (input.LA(1) >= 102 && input.LA(1) <= 104) ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					}
					break;

				default :
					if ( cnt9 >= 1 ) break loop9;
					EarlyExitException eee = new EarlyExitException(9, input);
					throw eee;
				}
				cnt9++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "printf"



	// $ANTLR start "operador"
	// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:134:1: operador : ( '%' | '+' | '-' | '*' | '/' | '>' | '<' | '<=' | '>=' | '||' | '&&' | '!=' | '==' | '++' | '--' | '**' | '=' );
	public final void operador() throws  {
		try {
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:134:10: ( '%' | '+' | '-' | '*' | '/' | '>' | '<' | '<=' | '>=' | '||' | '&&' | '!=' | '==' | '++' | '--' | '**' | '=' )
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:
			{
			if ( input.LA(1)==ADICAO||input.LA(1)==DECREMENTO||(input.LA(1) >= DIFERENTE && input.LA(1) <= DIVISAO)||input.LA(1)==DOISIGUAIS||input.LA(1)==E||input.LA(1)==IGUAL||input.LA(1)==INCREMENTO||(input.LA(1) >= MAIOR && input.LA(1) <= MULTIPLICACAO)||input.LA(1)==OU||input.LA(1)==SUBTRACAO||input.LA(1)==105 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "operador"



	// $ANTLR start "expr"
	// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:138:1: expr : ( INT | ID | CHAR | STRING | DOUBLE | BOOLEAN | LONG | FLOAT );
	public final void expr() throws  {
		try {
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:138:6: ( INT | ID | CHAR | STRING | DOUBLE | BOOLEAN | LONG | FLOAT )
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:
			{
			if ( input.LA(1)==BOOLEAN||input.LA(1)==CHAR||input.LA(1)==DOUBLE||input.LA(1)==FLOAT||input.LA(1)==ID||input.LA(1)==INT||input.LA(1)==LONG||input.LA(1)==STRING ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "expr"



	// $ANTLR start "expressao"
	// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:140:1: expressao : ( ID MAIOR ID | ID DOISIGUAIS ID | ID MENORIGUAL ID | ID MAIORIGUAL ID | ID DIFERENTE ID | ID E ID | ID OU ID );
	public final void expressao() throws  {
		try {
			// C:\\Users\\Toshio\\Desktop\\6º Semestre\\Construção de Compiladores\\AphonsoJava.g:141:2: ( ID MAIOR ID | ID DOISIGUAIS ID | ID MENORIGUAL ID | ID MAIORIGUAL ID | ID DIFERENTE ID | ID E ID | ID OU ID )
			int alt10=7;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==ID) ) {
				switch ( input.LA(2) ) {
				case MAIOR:
					{
					alt10=1;
					}
					break;
				case DOISIGUAIS:
					{
					alt10=2;
					}
					break;
				case MENORIGUAL:
					{
					alt10=3;
					}
					break;
				case MAIORIGUAL:
					{
					alt10=4;
					}
					break;
				case DIFERENTE:
					{
					alt10=5;
					}
					break;
				case E:
					{
					alt10=6;
					}
					break;
				case OU:
					{
					alt10=7;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 10, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}
